# canvas4rust2tetris

./: .yo-rc.json  README.md  async_queue.py  asyncpython_request_saya copy.py  img2word.py  index.html  package.json  server.js  shell.bash  tsconfig.json  webpack.config.js
async_request_py/: async_queue.py  asyncpython_request_saya copy.py  curl.bash  curl2.bash  make_curlbash.py  python_request_saya.py  saya.txt
http_post/: Cargo.toml
http_post/src/: lib.rs  main.rs  sync_request.rs
public/: index.html
src/: canvas.ts  main.ts  websocket.ts
